--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ body {
 #start-screen {
   position: fixed;
   top: 0; left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: radial-gradient(circle, #3a2415 0%, #1a0f05 100%);
   display: flex;
   flex-direction: column;
@@ -154,7 +154,7 @@ button#convertirme:hover {
 #mapa-interactivo {
   position: relative;
   width: 97vw; 
-  height: 72vh;
+  height: 65vh;
   max-width: 900px;
   margin: auto; 
   border: 4px solid #d4a017;
